# mtg_lotr_scrap

./: README.md  api.ipynb  faltantes.json  flatten_dict.ipynb  functions.ipynb  json_norm.ipynb  lotr.db  ltr.db  pyproject.toml  set_db.ipynb  v3.ipynb  working_with_dicts.ipynb
funcs/: treat_card.py
old/: faltantes.csv  faltantesv2.md
