[tool.poetry]
name = "magictg-lotr-cards"
version = "0.1.0"
description = ""
authors = ["arthurpieri <git@arthurpieri.com>"]
readme = "README.md"
packages = [{include = "magictg_lotr_cards"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
mtgsdk = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
