[tool.poetry]
name = "magictg-lotr-cards"
version = "0.1.0"
description = ""
authors = ["arthurpieri <git@arthurpieri.com>"]
readme = "README.md"
packages = [{include = "magictg_lotr_cards"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
mtgsdk = "^1.3.1"

[tool.poetry.group.code_quality.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 120
max-attributes=9
disable = [
"consider-iterating-dictionary",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
